fixed a bug on mobil scrollbar

--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,6 @@
 /* MEDIA / MOBIL */
 @media (max-width: 900px) {
+
     .card-grid {
         grid-template-columns: 1fr;
     }
@@ -25,7 +26,17 @@
         padding: 0 1rem 4rem;
     }
 
+    .section:nth-of-type(odd)::after,
+    .section:nth-of-type(even)::after {
+        display: none;
+    }
+
     ol {
         padding-left: 1.2rem;
+    }
+
+    body::before,
+    body::after {
+        display: none;
     }
 }
